--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
             <version>${thymeleaf-extras-springsecurity5.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
